--- a/ejercicio_3/ejercicio_3.html
+++ b/ejercicio_3/ejercicio_3.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3</title>
 </head>
+
 <body>
-    <script>
-        
-    </script>
+
+    <h1>Cifrado César</h1>
+    <form method="post" onsubmit="return cifradoCesar(this)">
+        <h2>- Descifrar -</h2>
+        <p>
+            <label for="alfabeto">Alfabeto</label>
+            <select name="alfabeto" id="alfabeto">
+                <option value="castellano">Castellano</option>
+                <option value="ingles">Inglés</option>
+            </select>
+        </p>
+        <p>
+            <label for="texto">Texto a descifrar</label>
+            <textarea id="texto" name="texto"></textarea>
+        </p>
+        <p>
+            <label for="rotacion">Nivel de Rotado</label>
+            <input type="number" id="rotacion" name="rotacion" required>
+        </p>
+        <p>
+            <button type="submit">Descifrar</button>
+        </p>
+    </form>
+    <script src="ejercicio_3.js"></script>
 </body>
+
 </html>
