--- a/ejercicio_2/ejercicio_2.html
+++ b/ejercicio_2/ejercicio_2.html
@@ -22,10 +22,10 @@
 
         <h2>Contraseña</h2>
         <p>
-            <label for="nueva_contrasena">Nueva contraseña</label>
-            <input type="password" id="nueva_contrasena" name="nueva_contrasena"> <br>
-            <label for="confirmar_contrasena">Vuelve a escribir la contraseña</label>
-            <input type="password" id="confirmar_contrasena" name="confirmar_contrasena"> <br>
+            <label for="nuevaContrasena">Nueva contraseña</label>
+            <input type="password" id="nuevaContrasena" name="nuevaContrasena"> <br>
+            <label for="confirmarContrasena">Vuelve a escribir la contraseña</label>
+            <input type="password" id="confirmarContrasena" name="confirmarContrasena"> <br>
             <label for="indicio">Indicio de contraseña</label>
             <textarea id="indicio" name="indicio"></textarea>
         </p>
