ejercicio 3 listo y comentado

--- a/ejercicio_3/ejercicio_3.html
+++ b/ejercicio_3/ejercicio_3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3</title>
     <style>
+        /* El mensaje descifrado lo escribe en rojo */
         #resultado {
             color: red;
         }
